# snarkOS

./: .gitignore  .rusty-hook.toml  Cargo.toml  build.rs  run-client.sh  run-pool.sh  run-prover-pool-worker.sh  run-prover-pool.sh  run-prover.sh  run-validator.sh
cli/src/commands/: start.rs
cli/src/helpers/: logger.rs
db/: tbl.sql
display/src/: lib.rs
etc/: pool.json
node/: Cargo.toml
node/cdn/: Cargo.toml
node/consensus/src/: lib.rs
node/metrics/: Cargo.toml
node/metrics/src/: lib.rs  model.rs
node/router/: Cargo.toml
node/router/core/: Cargo.toml
node/router/core/src/: docs.rs  error.rs  lib.rs  serve.rs  subs.rs  ws.rs
node/router/core/src/extractor/: ip.rs  json.rs  mod.rs
node/router/messages/src/helpers/: node_type.rs
node/router/src/: handshake.rs  inbound.rs  lib.rs  routing.rs
node/router/src/http/: mod.rs
node/router/tests/: connect.rs
node/src/: lib.rs  node.rs
node/src/pool/: config.rs  export.rs  mod.rs  router.rs
node/src/pool/http/: error.rs  handle.rs  mod.rs  model.rs  route.rs  ws.rs
node/src/prover/: mod.rs
node/src/prover/http/: error.rs  handle.rs  mod.rs  model.rs  route.rs  ws.rs
node/src/validator/: mod.rs
node/src/worker/: mod.rs
node/sync/: Cargo.toml
node/tests/: handshake.rs
node/tests/common/: node.rs
scripts/: compile.sh  get-testnet-nodes.sh  info.sh  package.sh  run-pool-worker.sh  run-pool.sh
sql/: tbl.sql
