[package]
name = "snarkos-node-router-core"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.2", features = ["macros", "ws", "json"] }
axum-jsonschema = { version = "0.8.0", features = ["aide"] }
axum-macros = "0.4.0"
serde_json = { version = "1", features = ["preserve_order"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_with = "3.7.0"
serde_with_macros = "3.7.0"
chrono = { version = "0.4", features = ["serde"] }
eyre = "0.6.8"
thiserror = "1"
tracing = "0.1.39"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5.0", features = ["full"] }
aide = { version = "0.13.0", features = ["axum", "macros", "scalar"] }
schemars = { version = "0.8.16", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["rt"] }
axum-client-ip = "0.6.0"
dashmap = "5.5.3"
url = "2.5.0"
